--- a/assets/css/homestyle.css
+++ b/assets/css/homestyle.css
@@ -69,9 +69,10 @@ a:active {
 }
 
 img{
-  height: 250px;
-  padding: 10px;
-  margin-right: 0;
+  height: 300px;
+  padding-top: 0;
+  padding-bottom: 20px;
+  padding-left: 30px;
 }
 /* Portfolio List Items */
 
@@ -83,8 +84,19 @@ img{
 }
 
 .card {
-  box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.3);
+  /* padding-top: 20px; */
+  height: 510px;
+  border-radius: 0;
+  /* box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.3); */
 }
+
+/* .card-body {
+  padding-top: ;
+} */
+
+/* .col-md-7 {
+  padding-top: 0;
+} */
 
 .form-header {
   height: 75px;
@@ -151,28 +163,32 @@ textarea:focus {
 
 /* Footer */
 .footer-text {
-  color: rgb(158, 157, 157);
+  color: #000000;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
-  padding-left: 45px;
+  display: block;
+  margin:0px 0px -30px 0px;
+  /* padding: 5px */
+  /* padding-left: 20px; */
 }
 
 .footer-text:hover {
-  color: rgb(100, 100, 100);
+  color: #000000;
 }
 
 #copyright {
   font-size: 12px;
+  padding-right: 45px;
 }
 
 
 .footer {
-  /* position: fixed; */
+  /* position: absolute; */
   /* margin-bottom: 1%; */
   width: 100%; 
   height: 100px;
   line-height: 80px; /* Vertically center the text there */
-  background-color: #ffffff;
+  /* background-color: #ffffff; */
   /* mix-blend-mode: screen;
     
     font-size: 20px;
