added photo frame and placeholder text

--- a/assets/css/homestyle.css
+++ b/assets/css/homestyle.css
@@ -78,6 +78,17 @@ img{
 
 
 
+/* About Me Items */
+#about-me-text {
+  font-family: 'Raleway', sans-serif;
+}
+
+
+/* About Me Items */
+
+
+
+
 /* Contact Me Form */
 .hide {
   display: none;
