--- a/assets/css/homestyle.css
+++ b/assets/css/homestyle.css
@@ -1,134 +1,160 @@
+/* 
+.container {
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+} */
 
-html {
-  position: relative;
-  min-height: 100%;
+/* .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      } */
+
+/* @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      } */
+
+* {
+  margin: 0;
 }
 
 body {
-    background-color: #E55F93;
-    margin-bottom: 100px; /* Margin bottom by footer height */
+  background-image: url("/assets/images/HeaderImageBig.png");
+  background-position: center;
+  background-repeat: no-repeat; 
+  background-size: cover; 
 }
 
-button.white-box {
-    background-color: white;
-    /* box-shadow: 12px 10px 2px black; */
-    width: 500px;
-    height: auto;
-    text-align: center;
-    mix-blend-mode: screen;
-    top: 50%; /* Position text in the middle */
-    left: 50%; /* Position text in the middle */
-    font-size: 50px;
-    font-family: 'Montserrat', sans-serif;
-    padding: 25px;
-    border: none;
-    outline: none;
+.myLogo {
+  width: 60%;
+  padding-top: 50px;
+  margin-left: 15%;
 }
 
-#container {
-   padding-top: 8%;
-   background-color: #E55F93;
+.navbar {
+  background-image: none;
 }
 
+a.navbar {
+  text-decoration: none;
+  color: #5d5c5d;
+  padding: 20px 40px;
+  font-size: 24px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 200;
+  display: inline-block;
+  /* text-align: center; */
+  letter-spacing: 20px;
+}
 
+a.navbar:hover {
+  color: #ee028d !important;
+  text-decoration: none;
+}
 
-/* Portfolio List Items */
+/* .footer-text {
+  color: white;
+  font-family: "Raleway", sans-serif;
+  display: inline-block;
+} */
+
+footer {
+  height: 150px;
+  background-color: #a3a3a3;
+  /* display: inline-block; */
+  color: white;
+  font-family: "Raleway", sans-serif;
+  font-weight: lighter;
+  list-style-type: none;
+}
+
+#github {
+  text-decoration: none;
+  color: white;
+  font-size: 26px;
+}
+
+#linkedin {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+
+#copyright {
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+  padding-top: 5px;
+}
+
+/* ---------------------------PORTFOLIO--------------------------- */
 .hide-portfolio {
   display: none;
 }
 
-ul {
-    list-style-type: none;
-    display: block;
+.portfolio.col-sm-6.col-md-4 {
+  border: #5d5c5d 1px solid;
+  height: 500px;
 }
 
-a {
-    text-decoration: none;
-    color: #000;
-}
-
-a:link {
-    text-decoration: none;
-}
-  
-a:visited {
-    text-decoration: none;
-}
-  
-a:hover {
-    text-decoration: none;
-    color: black;
-}
-  
-a:active {
-    text-decoration: none;
-}
-
-img{
-  height: 300px;
-  padding-top: 0;
-  padding-bottom: 20px;
-  padding-left: 30px;
-}
-/* Portfolio List Items */
-
-
-
-/* About Me Items */
-#about-me-text {
-  font-family: 'Raleway', sans-serif;
-}
-/* About Me Items */
-
-
-
-
-/* Contact Me Form */
-.hide {
+/* ---------------------------ABOUT ME--------------------------- */
+.hide-about-me {
   display: none;
 }
 
+#frame-photo {
+  height: 500px;
+}
+
+p {
+  margin-top: 50%;
+}
+
+/* ---------------------------CONTACT--------------------------- */
+.hide-contact-me-form {
+  display: none;
+}
+
+.container-fluid.contact {
+  padding-left: 25%;
+  padding-bottom: 100px;
+}
+
 .card {
-  /* padding-top: 20px; */
   height: 510px;
   border-radius: 0;
-  /* box-shadow: 10px 10px 25px rgba(0, 0, 0, 0.3); */
+  width: 70%;
 }
 
 /* .card-body {
-  padding-top: ;
-} */
-
-/* .col-md-7 {
-  padding-top: 0;
+  padding-bottom: 100px;
 } */
 
 .form-header {
   height: 75px;
-  background-color: #82B1FF;
+  width: 100%;
+  background-color: #ee028d;
   color: #ffffff;
   text-align: center;
   padding-top: 10px;
   box-shadow: 2px 2px 6px rgb(145, 145, 145);
+  font-family: "Raleway", sans-serif;
 }
 
 .fas.fa-envelope {
   color: #ffffff;
 }
 
-i {
-  color: #9E9E9E;
-}
-
-label {
-  color: #9E9E9E;
-}
-
 input[type="text"],
 select.form-control {
   background: transparent;
   border: none;
-  border-bottom: 1px solid #9E9E9E;
+  border-bottom: 1px solid #9e9e9e;
   -webkit-box-shadow: none;
   box-shadow: none;
   border-radius: 0;
@@ -138,21 +164,21 @@ input[type="text"]:focus,
 select.form-control:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
-  border-bottom: 1px solid #9E9E9E;
+  border-bottom: 1px solid #9e9e9e;
 }
 
 ::placeholder {
-  font-family: FontAwesome; 
+  font-family: FontAwesome;
 }
 
 textarea:focus {
   box-shadow: none !important;
-  border-color: #9E9E9E !important;
+  border-color: #9e9e9e !important;
 }
 
 .submit-button {
   color: #ffffff;
-  background-color: #82B1FF;
+  background-color: #ee028d;
   height: 50px;
   width: 100px;
   border: none !important;
@@ -162,77 +188,3 @@ textarea:focus {
 .submit-button:focus {
   outline: none;
 }
-/* Contact Me Form */
-
-
-
-/* Footer */
-.footer-text {
-  color: #000000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px;
-  display: block;
-  margin:0px 0px -30px 0px;
-  /* padding: 5px */
-  /* padding-left: 20px; */
-}
-
-.footer-text:hover {
-  color: #000000;
-}
-
-#copyright {
-  font-size: 12px;
-  padding-right: 45px;
-}
-
-
-.footer {
-  /* position: absolute; */
-  /* margin-bottom: 1%; */
-  width: 100%; 
-  height: 100px;
-  line-height: 80px; /* Vertically center the text there */
-  /* background-color: #ffffff; */
-  /* mix-blend-mode: screen;
-    
-    font-size: 20px;
-    
-    padding: 25px;
-    border: none;
-    outline: none; */
-}
-/* Footer */
-
-
-
-
-/* .white-box {
-    --x-shadow: 0;
-    --y-shadow: 0;
-    --x:50%;
-    --y:50%;
-    transition: all 0.2s ease;
-    position: relative;
-    padding: 2rem;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 8vw;
-    margin-top: 0;
-    background-color: #cac8c8;
-    color: transparent;
-    text-shadow: 2px 0px 2px rgba(255, 255, 255, 0.8);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-  }
-  
-  .white-box:hover {
-    transition: all 0.1s ease;
-    text-shadow: var(--x-shadow) var(--y-shadow) 2px rgba(255, 255, 255, 0.8);
-  }
-  
-  .white-box p {
-    position: absolute;
-    max-height: 100vh;
-  } */
