--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,44 +1,43 @@
-
 :root {
   background-color: #ffffff;
   /* background-color: #E55F93; */
 }
 
 .shadow {
-    --x-shadow: 0;
-    --y-shadow: 0;
-    --x:50%;
-    --y:50%;
-    /* font-size: 15rem; */
-    transform: translateY(0%);
-    transition: all 0.2s ease;
-    position: absolute
-    padding: 2rem;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 50vw;
-    margin-top: 0;
-    background-color: #cac8c8;
-    /* background-color: #af3162; */
-    color: transparent;
-    text-shadow: 5px 2px 10px rgba(255, 255, 255, 0.8);
-    /* text-shadow: 5px 2px 10px #E55F93; */
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-    z-index: 1;
-  }
-  
+  --x-shadow: 0;
+  --y-shadow: 0;
+  --x: 50%;
+  --y: 50%;
+  /* font-size: 15rem; */
+  transform: translateY(0%);
+  transition: all 0.2s ease;
+  position: absolute;
+  padding: 2rem;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 50vw;
+  margin-top: 0;
+  background-color: #cac8c8;
+  /* background-color: #af3162; */
+  color: transparent;
+  text-shadow: 5px 2px 10px rgba(255, 255, 255, 0.8);
+  /* text-shadow: 5px 2px 10px #E55F93; */
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  z-index: 1;
+}
+
 .shadow:hover {
-    transition: all 0.1s ease;
-    text-shadow: var(--x-shadow) var(--y-shadow) 8px rgba(255, 255, 255, 0.8);
-    /* text-shadow: var(--x-shadow) var(--y-shadow) 8px #E55F93; */
-  }
-  
+  transition: all 0.1s ease;
+  text-shadow: var(--x-shadow) var(--y-shadow) 8px rgba(255, 255, 255, 0.8);
+  /* text-shadow: var(--x-shadow) var(--y-shadow) 8px #E55F93; */
+}
+
 .shadow p {
-    /* position: absolute; */
-    max-height: 100vh;
-    /* top: 2rem;
+  /* position: absolute; */
+  max-height: 100vh;
+  /* top: 2rem;
     left: 2rem;
     background-image: radial-gradient(circle closest-side, rgba(255, 255, 255, 0.05), transparent);
     background-position: var(--x) var(--y);
@@ -47,63 +46,62 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     transition: all 0.1s ease; */
-  }
-
-.container {
-    /* position: absolute; */
-    /* top: 25px;
-    left: 25px; */
-  }
+}
 
 h1.shadow {
-    box-shadow: none !important;
-    margin-top: 0;
-    z-index: 1;
-    transform: translateY(-5%);
-  }
+  box-shadow: none !important;
+  margin-top: 0;
+  z-index: 1;
+  transform: translateY(-5%);
+}
 
-  .container {
-    left:0;
-    right:0;
-  
-    margin-left: auto;
-    margin-right: auto;
-  
-    position: absolute;
-    width: 100%;
-  
-    /* outline: 1px solid black;
+.container {
+  left: 0;
+  right: 0;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  position: absolute;
+  width: 100%;
+
+  /* outline: 1px solid black;
     background: white; */
-  }
-  
+}
+
 #logo {
-    display: block;
-    margin-left: 19%;
-    margin-right: auto;
-    width: 50%;
-    z-index: 3;
-    /* margin-top: 50%; */
-    position: absolute;
-    transform: translateY(140%);
-    /* padding-left: 30%; */
-    /* top: 0; */
-    /* left: 0; */
-  }
+  display: block;
+  margin-left: 19%;
+  margin-right: auto;
+  width: 50%;
+  z-index: 3;
+  /* margin-top: 50%; */
+  position: absolute;
+  transform: translateY(140%);
+  /* padding-left: 30%; */
+  /* top: 0; */
+  /* left: 0; */
+}
 
 a {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 100;
-    text-decoration: none !important;
-    color: #000 !important;
-  }
+  font-family: "Raleway", sans-serif;
+  font-weight: 100;
+  text-decoration: none !important;
+  color: #000 !important;
+}
+
+a:hover {
+  color: #ee028d !important;
+  text-decoration: none;
+}
 
 h2#enter {
-    /* text-align: right; */
-    /* padding-right: 50px; */
-    text-decoration: none;
-    margin-top: 320px;
-    margin-left: 90%;
-    position: absolute;
-    z-index: 10;
-    /* transform: translateY(180%); */
-  }
+  /* text-align: right; */
+  /* padding-right: 50px; */
+  text-decoration: none;
+  margin-top: 30%;
+  margin-left: 90%;
+  position: absolute;
+  z-index: 10;
+  /* transform: translateY(180%); */
+}
