--- a/assets/css/homestyle.css
+++ b/assets/css/homestyle.css
@@ -83,6 +83,17 @@ a.navbar:hover {
   opacity: 60%;
 }
 
+#envelope {
+  text-decoration: none;
+  height: 100px;
+  opacity: 20%;
+  padding: 30px 0px;
+}
+
+#envelope:hover {
+  opacity: 60%;
+}
+
 #up-arrow {
   text-decoration: none;
   height: 100px;
@@ -115,7 +126,7 @@ a.navbar:hover {
   text-decoration: none;
   color: #8b8b8b;
   font-size: 12px;
-  margin-left: 130px;
+  margin-left: 45%;
 }
 
 /* ---------------------------PORTFOLIO--------------------------- */
@@ -151,19 +162,28 @@ a.navbar:hover {
 }
 
 .container-fluid.contact {
-  padding-left: 25%;
+  padding-left: 20%;
+  background-color: #ee028d;
+  width: 90%;
   /* padding-bottom: 80px; */
 }
 
 .card {
-  height: 510px;
-  border-radius: 0;
+  height: 600px;
+  border: transparent;
   width: 70%;
+  background-color: #ee028d;
+  
 }
 
 /* .card-body {
   padding-bottom: 100px;
 } */
+
+.form-group {
+  color: white;
+  font-family: "Raleway", sans-serif;
+}
 
 .form-header {
   height: 75px;
@@ -172,7 +192,7 @@ a.navbar:hover {
   color: #ffffff;
   text-align: center;
   padding-top: 10px;
-  box-shadow: 2px 2px 6px rgb(145, 145, 145);
+  /* box-shadow: 2px 2px 6px rgb(145, 145, 145); */
   font-family: "Raleway", sans-serif;
 }
 
@@ -208,11 +228,11 @@ textarea:focus {
 
 .submit-button {
   color: #ffffff;
-  background-color: #ee028d;
+  background-color: #af0267;
   height: 50px;
   width: 100px;
   border: none !important;
-  box-shadow: 2px 2px 6px rgb(145, 145, 145);
+  /* box-shadow: 2px 2px 6px rgb(145, 145, 145); */
 }
 
 .submit-button:focus {
