--- a/assets/css/portfolioPages.css
+++ b/assets/css/portfolioPages.css
@@ -52,9 +52,9 @@
       
       #github {
         text-decoration: none;
-        height: 100px;
+        height: 70px;
         opacity: 20%;
-        padding: 30px 0px;
+        padding: 0px 0px 30px 0px;
       }
       
       #github:hover {
@@ -74,9 +74,9 @@
       
       #photo {
         text-decoration: none;
-        height: 100px;
+        height: 130px;
         opacity: 20%;
-        padding: 30px 0px;
+        padding: 30px 0px 60px 0px;
       }
       
       #photo:hover {
@@ -91,6 +91,39 @@
       }
       
       #envelope:hover {
+        opacity: 60%;
+      }
+
+      #right-arrow {
+        text-decoration: none;
+        height: 40px;
+        opacity: 20%;
+        padding: 0px;
+      }
+      
+      #right-arrow:hover {
+        opacity: 60%;
+      }
+
+      #left-arrow {
+        text-decoration: none;
+        height: 40px;
+        opacity: 20%;
+        padding: 0px;
+      }
+      
+      #left-arrow:hover {
+        opacity: 60%;
+      }
+
+      #grid {
+        text-decoration: none;
+        height: 30px;
+        opacity: 20%;
+        padding: 0px;
+      }
+      
+      #grid:hover {
         opacity: 60%;
       }
       
@@ -138,8 +171,8 @@
           margin-left: 150px;
           width: 80%;
           height: 500px;
-          background-image:url("../images/portfolio/ExteriorBackHorizontal-WebSize.jpg");
-          background-size: cover;
+          /* background-image:url("../images/portfolio/ExteriorBackHorizontal-WebSize.jpg"); */
+          /* background-size: cover; */
       }
 
       .body-info {
@@ -152,7 +185,7 @@
 
       .visit-button {
         color: #ffffff;
-        background-color: #af0267;
+        background-color: #EE028D;
         height: 50px;
         width: 200px;
         border: none !important;
