added rollovers to portfolio thumbnails

--- a/assets/css/homestyle.css
+++ b/assets/css/homestyle.css
@@ -23,9 +23,14 @@
   margin: 0;
 }
 
-.myLogo {
-  width: 25%;
-  margin-left: 12%;
+img.myLogo {
+  width: 80%;
+  margin-left: 30%;
+  /* padding-left: 0; */
+}
+
+a {
+  width: 36%;
 }
 
 header {
@@ -39,6 +44,7 @@ a.navbar {
   font-family: "Raleway", sans-serif;
   font-weight: 300;
   letter-spacing: 10px;
+  padding-left: 10px;
 }
 
 a.navbar:hover {
@@ -52,9 +58,9 @@ a.navbar:hover {
 
 #github {
   text-decoration: none;
-  height: 100px;
+  height: 75px;
   opacity: 20%;
-  padding: 30px 0px;
+  padding: 0px 0px 30px 0px;
 }
 
 #github:hover {
@@ -83,7 +89,7 @@ a.navbar:hover {
   opacity: 60%;
 }
 
-#envelope {
+/* #envelope {
   text-decoration: none;
   height: 100px;
   opacity: 20%;
@@ -103,7 +109,7 @@ a.navbar:hover {
 
 #up-arrow:hover {
   opacity: 60%;
-}
+} */
 
 .sidenav {
   height: 100%;
@@ -111,7 +117,7 @@ a.navbar:hover {
   position: fixed;
   z-index: 1;
   overflow-x: hidden;
-  padding-top: 300px;
+  padding-top: 280px;
 }
 
 .sidenav a {
@@ -137,6 +143,7 @@ a.navbar:hover {
 .portfolio.col-sm-6.col-md-4 {
   /* border: #5d5c5d 1px solid; */
   height: 500px;
+  border-radius: 50px;
 }
 
 /* ---------------------------ABOUT ME--------------------------- */
@@ -164,7 +171,7 @@ a.navbar:hover {
 .container-fluid.contact {
   padding-left: 20%;
   background-color: #ee028d;
-  width: 90%;
+  width: 100%;
   /* padding-bottom: 80px; */
 }
 
@@ -173,7 +180,6 @@ a.navbar:hover {
   border: transparent;
   width: 70%;
   background-color: #ee028d;
-  
 }
 
 /* .card-body {
@@ -237,4 +243,166 @@ textarea:focus {
 
 .submit-button:focus {
   outline: none;
+}
+
+
+
+
+/* HTML CSSResult Skip Results Iframe
+EDIT ON */
+.grid {
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 0 1em;
+  max-width: 1000px;
+  list-style: none;
+  text-align: center;
+}
+
+/* Common style */
+.grid figure {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 320px;
+  max-width: 479px;
+  max-height: 360px;
+  width: 46%;
+  background: #3085a3;
+  text-align: center;
+  cursor: pointer;
+}
+
+.grid figure img {
+  position: relative;
+  display: block;
+  min-height: 100%;
+  max-width: 100%;
+  opacity: 0.9;
+}
+
+.grid figure figcaption {
+  /* padding: 2em; */
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+/* .grid figure figcaption::before,
+.grid figure figcaption::after {
+  pointer-events: none;
+} */
+
+.grid figure figcaption,
+.grid figure figcaption > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+/* .grid figure figcaption > a {
+  z-index: 1000;
+  text-indent: 200%;
+  white-space: nowrap;
+  font-size: 0;
+  opacity: 0;
+} */
+
+/* .grid figure h2 {
+  word-spacing: -0.15em;
+  font-weight: 300;
+}
+
+.grid figure h2 span {
+  font-weight: 800;
+} */
+
+
+.grid figure h2 {
+  margin: 0;
+}
+
+.grid figure h2 {
+  letter-spacing: 1px;
+  /* font-size: 100%; */
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  /* text-align: center; */
+  /* word-spacing: -0.15em;
+  font-weight: 300; */
+}
+
+/* figure.effect-bubba img {
+  opacity: 0.7;
+  -webkit-transition: opacity 0.35s;
+  transition: opacity 0.35s;
+} */
+
+figure.effect-bubba:hover img {
+  opacity: 0.2;
+}
+
+figure.effect-bubba figcaption::before,
+figure.effect-bubba figcaption::after {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  bottom: 30px;
+  left: 30px;
+  content: '';
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+}
+
+figure.effect-bubba figcaption::before {
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: scale(0,1);
+  transform: scale(0,1);
+}
+
+figure.effect-bubba figcaption::after {
+  border-right: 1px solid #fff;
+  border-left: 1px solid #fff;
+  -webkit-transform: scale(1,0);
+  transform: scale(1,0);
+}
+
+/* figure.effect-bubba h2 {
+  padding-top: 30%;
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(0,-20px,0);
+  transform: translate3d(0,-20px,0);
+} */
+
+figure.effect-bubba h2 {
+  padding: 150px 2.5em;
+  opacity: 0;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,20px,0);
+  transform: translate3d(0,20px,0);
+}
+
+figure.effect-bubba:hover figcaption::before,
+figure.effect-bubba:hover figcaption::after {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+
+figure.effect-bubba:hover h2 {
+  opacity: 1;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
