--- a/assets/css/portfolioPages.css
+++ b/assets/css/portfolioPages.css
@@ -22,10 +22,16 @@
       * {
         margin: 0;
       }
+
+      a {
+        width: 36%;
+      }
       
-      .myLogo {
-        width: 25%;
-        margin-left: 12%;
+      img.myLogo {
+        width: 80%;
+  margin-left: 20%;
+  padding-left: 0;
+        
       }
       
       header {
@@ -50,7 +56,7 @@
         margin-left: 100px;
       }
       
-      #github {
+      /* #github {
         text-decoration: none;
         height: 70px;
         opacity: 20%;
@@ -92,13 +98,13 @@
       
       #envelope:hover {
         opacity: 60%;
-      }
+      } */
 
       #right-arrow {
         text-decoration: none;
-        height: 40px;
+        height: 70px;
         opacity: 20%;
-        padding: 0px;
+        padding: 0px 0px 30px 0px;
       }
       
       #right-arrow:hover {
@@ -107,9 +113,9 @@
 
       #left-arrow {
         text-decoration: none;
-        height: 40px;
+        height: 100px;
         opacity: 20%;
-        padding: 0px;
+        padding: 30px 0px;
       }
       
       #left-arrow:hover {
@@ -118,16 +124,16 @@
 
       #grid {
         text-decoration: none;
-        height: 30px;
+        height: 100px;
         opacity: 20%;
-        padding: 0px;
+        padding: 30px 0px;
       }
       
       #grid:hover {
         opacity: 60%;
       }
       
-      #up-arrow {
+      /* #up-arrow {
         text-decoration: none;
         height: 100px;
         opacity: 20%;
@@ -136,7 +142,7 @@
       
       #up-arrow:hover {
         opacity: 60%;
-      }
+      } */
       
       .sidenav {
         height: 100%;
@@ -144,7 +150,7 @@
         position: fixed;
         z-index: 1;
         overflow-x: hidden;
-        padding-top: 0;
+        padding-top: 80px;
       }
       
       .sidenav a {
@@ -169,6 +175,7 @@
           /* border: 1px black solid; */
           border-radius: 20px;
           margin-left: 150px;
+          margin-top: 80px;
           width: 80%;
           height: 500px;
           /* background-image:url("../images/portfolio/ExteriorBackHorizontal-WebSize.jpg"); */
