--- a/assets/css/portfolioPages.css
+++ b/assets/css/portfolioPages.css
@@ -19,44 +19,43 @@
         }
       } */
 
-      * {
-        margin: 0;
-      }
+* {
+  margin: 0;
+}
 
-      a {
-        width: 36%;
-      }
-      
-      img.myLogo {
-        width: 80%;
+a {
+  width: 36%;
+}
+
+img.myLogo {
+  width: 80%;
   margin-left: 20%;
   padding-left: 0;
-        
-      }
-      
-      header {
-        padding-top: 50px;
-      }
-      
-      a.navbar {
-        text-decoration: none;
-        color: #5d5c5d;
-        font-size: 16px;
-        font-family: "Raleway", sans-serif;
-        font-weight: 300;
-        letter-spacing: 10px;
-      }
-      
-      a.navbar:hover {
-        color: #ee028d !important;
-        text-decoration: none;
-      }
-      
-      .main {
-        margin-left: 100px;
-      }
-      
-      /* #github {
+}
+
+header {
+  padding-top: 50px;
+}
+
+a.navbar {
+  text-decoration: none;
+  color: #5d5c5d;
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  letter-spacing: 10px;
+}
+
+a.navbar:hover {
+  color: #ee028d !important;
+  text-decoration: none;
+}
+
+.main {
+  margin-left: 100px;
+}
+
+/* #github {
         text-decoration: none;
         height: 70px;
         opacity: 20%;
@@ -100,40 +99,40 @@
         opacity: 60%;
       } */
 
-      #right-arrow {
-        text-decoration: none;
-        height: 70px;
-        opacity: 20%;
-        padding: 0px 0px 30px 0px;
-      }
-      
-      #right-arrow:hover {
-        opacity: 60%;
-      }
+#right-arrow {
+  text-decoration: none;
+  height: 70px;
+  opacity: 20%;
+  padding: 0px 0px 30px 0px;
+}
 
-      #left-arrow {
-        text-decoration: none;
-        height: 100px;
-        opacity: 20%;
-        padding: 30px 0px;
-      }
-      
-      #left-arrow:hover {
-        opacity: 60%;
-      }
+#right-arrow:hover {
+  opacity: 60%;
+}
 
-      #grid {
-        text-decoration: none;
-        height: 100px;
-        opacity: 20%;
-        padding: 30px 0px;
-      }
-      
-      #grid:hover {
-        opacity: 60%;
-      }
-      
-      /* #up-arrow {
+#left-arrow {
+  text-decoration: none;
+  height: 100px;
+  opacity: 20%;
+  padding: 30px 0px;
+}
+
+#left-arrow:hover {
+  opacity: 60%;
+}
+
+#grid {
+  text-decoration: none;
+  height: 100px;
+  opacity: 20%;
+  padding: 30px 0px;
+}
+
+#grid:hover {
+  opacity: 60%;
+}
+
+/* #up-arrow {
         text-decoration: none;
         height: 100px;
         opacity: 20%;
@@ -143,63 +142,124 @@
       #up-arrow:hover {
         opacity: 60%;
       } */
-      
-      .sidenav {
-        height: 100%;
-        width: 80px;
-        position: fixed;
-        z-index: 1;
-        overflow-x: hidden;
-        padding-top: 80px;
-      }
-      
-      .sidenav a {
-        padding: 6px 6px 6px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-      }
-      
-      #copyright {
-        text-decoration: none;
-        color: #8b8b8b;
-        font-size: 12px;
-        margin-left: 45%;
-      }
-      
-      /* ----------------------------------------------------------- */
 
+.sidenav {
+  height: 100%;
+  width: 80px;
+  position: fixed;
+  z-index: 1;
+  overflow-x: hidden;
+  padding-top: 80px;
+}
 
-      .jumbotron {
-          /* border: 1px black solid; */
-          border-radius: 20px;
-          margin-left: 150px;
-          margin-top: 80px;
-          width: 80%;
-          height: 500px;
-          /* background-image:url("../images/portfolio/ExteriorBackHorizontal-WebSize.jpg"); */
-          /* background-size: cover; */
-      }
+.sidenav a {
+  padding: 6px 6px 6px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
 
-      .body-info {
-        border: 1px black solid;
-        border-radius: 20px;
-        margin-left: 150px;
-        width: 80%;
-        height: 1000px;
-      }
+#copyright {
+  text-decoration: none;
+  color: #8b8b8b;
+  font-size: 12px;
+  margin-left: 45%;
+}
 
-      .visit-button {
-        color: #ffffff;
-        background-color: #EE028D;
-        height: 50px;
-        width: 200px;
-        border: none !important;
-        font-family: "Raleway", sans-serif;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-      }
+/* ----------------------------------------------------------- */
 
-     
+.header-image {
+  /* border: 1px black solid; */
+  /* border-radius: 20px; */
+  /* margin-left: 150px;
+  margin-top: 80px;
+  max-width: 80%;
+  height: auto;
+  background-repeat: no-repeat; */
+  /* background-image:url("../images/portfolio/ExteriorBackHorizontal-WebSize.jpg"); */
+  /* background-size: cover; */
+  width: 100%;
+  height: auto;
+  background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+
+/* .header-text {
+  position: absolute;
+  height: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-20%, -100%);
+  z-index: 2;
+  color:white;
+} */
+
+/* .dot {
+  height: 150px;
+  width: 150px;
+  background-color: #bbb;
+  border-radius: 50%; */
+  /* display: inline-block; */
+  /* position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%); */
+    /* display: block; */
+    /* margin: auto;
+} */
+
+.body-info {
+  border: 1px white solid;
+  /* border-radius: 20px; */
+  margin-left: 150px;
+  width: 80%;
+ 
+  /* height: 1000px; */
+  
+}
+
+a:hover {
+  text-decoration: none !important;
+}
+
+.visit-button:focus {
+  outline: none;
+  text-decoration: none;
+}
+
+.visit-btns {
+  padding: 10px;
+  position: relative;
+  background-color: #fff;
+  margin: 10px;
+  padding-left: 30%;
+}
+
+.visit-button {
+  display: inline-block;
+  height: 50px;
+  width: 200px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #ee028d;
+  border: none !important;
+  cursor: pointer;
+  font-family: "Raleway", sans-serif;
+}
+
+.image-monitor {
+  width: 100%;
+}
+
+li {
+  list-style-type: none;
+  padding: 0px 0px 0px 20px;
+  margin: 0;
+}
+
+.image-screenshot {
+  width: 100%;
+}
