--- a/assets/css/homestyle.css
+++ b/assets/css/homestyle.css
@@ -19,8 +19,8 @@
         }
       } */
 
-* {
-  margin: 0;
+body {
+  background-color: #F7F9FB;
 }
 
 img.myLogo {
@@ -284,7 +284,7 @@ EDIT ON */
   display: block;
   min-height: 100%;
   max-width: 100%;
-  opacity: 0.9;
+  /* opacity: 0.9; */
 }
 
 .grid figure figcaption {
